# gles-compatibility-layer

./: CMakeLists.txt
cmake/: util.cmake
include/GLES/: gl.h
src/: draw.c  log.h  matrix.c  passthrough.c  passthrough.h  state.c  state.h
src/shaders/: main.fsh  main.vsh
src/shaders/es2/: main.fsh
src/shaders/es3/: main.fsh
test/: CMakeLists.txt
test/src/: main.cpp
